# SaDVIO

./: .gitignore  README.md
cpp/: CMakeLists.txt  Config.cmake.in  main.cpp
cpp/include/isaeslam/: slamCore.h  slamParameters.h  typedefs.h
cpp/include/isaeslam/data/: frame.h
cpp/include/isaeslam/data/features/: AFeature2D.h  BBox2d.h  Edgelet2D.h  EllipsePattern2D.h  Line2D.h  Point2D.h
cpp/include/isaeslam/data/landmarks/: ALandmark.h  BBox3d.h  Edgelet3D.h  Line3D.h  Model3D.h  Point3D.h
cpp/include/isaeslam/data/maps/: amap.h  globalmap.h  localmap.h
cpp/include/isaeslam/data/mesh/: mesh.h  mesher.h
cpp/include/isaeslam/data/sensors/: ASensor.h  Camera.h  DoubleSphere.h  Fisheye.h  IMU.h  RGBDCamera.h
cpp/include/isaeslam/dataproviders/: adataprovider.h
cpp/include/isaeslam/estimator/: APoseEstimator.h  ESKFEstimator.h  EpipolarPoseEstimator.h  EpipolarPoseEstimatorCustom.h  PnPPoseEstimator.h
cpp/include/isaeslam/featuredetectors/: aCustomFeatureDetector.h  aFeatureDetector.h  aOpenCVFeatureDetector.h
cpp/include/isaeslam/featuredetectors/custom_detectors/: Edgelet2DFeatureDetector.h  EllipsePatternFeatureDetector.h  Line2DFeatureDetector.h  csvKeypointDetector.h  semanticBBoxFeatureDetector.h
cpp/include/isaeslam/featuredetectors/custom_detectors/extractor/ellipsepattern/: EllipsePatternExtractor.cpp  EllipsePatternExtractor.h
cpp/include/isaeslam/featuredetectors/opencv_detectors/: cvBRISKFeatureDetector.h  cvFASTFeatureDetector.h  cvGFTTFeatureDetector.h  cvKAZEFeatureDetector.h  cvORBFeatureDetector.h  cvSTFeatureDetector.h
cpp/include/isaeslam/featurematchers/: EdgeletFeatureMatcher.h  EdgeletFeatureTracker.h  EllipsePatternFeatureMatcher.h  EllipsePatternFeatureTracker.h  Line2DFeatureMatcher.h  Line2DFeatureTracker.h  Point2DFeatureMatcher.h  Point2DFeatureTracker.h  afeaturematcher.h  afeaturetracker.h  semanticBBoxFeatureMatcher.h  semanticBBoxFeatureTracker.h
cpp/include/isaeslam/landmarkinitializer/: Edgelet3DlandmarkInitializer.h  Line3DlandmarkInitializer.h  Point3DlandmarkInitializer.h  alandmarkinitializer.h  semanticBBoxlandmarkInitializer.h
cpp/include/isaeslam/optimizers/: AOptimizer.h  AngularAdjustmentCERESAnalytic.h  BundleAdjustmentCERESAnalytic.h  BundleAdjustmentCERESNumeric.h  marginalization.hpp  parametersBlock.hpp  residuals.hpp
cpp/include/utilities/: ConfigFileReader.h  geometry.h  imgProcessing.h  timer.h
cpp/src/: slamBiMono.cpp  slamBiMonoVIO.cpp  slamCore.cpp  slamMono.cpp  slamMonoVIO.cpp  slamNonOverlappingFov.cpp  slamParameters.cpp
cpp/src/data/: frame.cpp
cpp/src/data/features/: AFeature2D.cpp  Edgelet2D.cpp  EllipsePattern2D.cpp  Point2D.cpp
cpp/src/data/landmarks/: ALandmark.cpp  Edgelet3D.cpp  Line3D.cpp  Point3D.cpp
cpp/src/data/maps/: globalmap.cpp  localmap.cpp
cpp/src/data/mesh/: mesh.cpp  mesher.cpp
cpp/src/data/sensors/: ASensor.cpp  Camera.cpp  DoubleSphere.cpp  IMU.cpp  RGBDCamera.cpp  fisheye.cpp
cpp/src/dataproviders/: adataprovider.cpp
cpp/src/estimator/: ESKFEstimator.cpp  EpipolarPoseEstimator.cpp  EpipolarPoseEstimatorCustom.cpp  PnPPoseEstimator.cpp
cpp/src/featuredetectors/: aCustomFeatureDetector.cpp  aFeatureDetector.cpp  aOpenCVFeatureDetector.cpp
cpp/src/featuredetectors/custom_detectors/: Edgelet2DFeatureDetector.cpp  EllipsePatternFeatureDetector.cpp  Line2DFeatureDetector.cpp  csvKeypointDetector.cpp  semanticBBoxFeatureDetector.cpp
cpp/src/featuredetectors/opencv_detectors/: cvBRISKFeatureDetector.cpp  cvFASTFeatureDetector.cpp  cvGFTTFeatureDetector.cpp  cvKAZEFeatureDetector.cpp  cvORBFeatureDetector.cpp  cvSTFeatureDetector.cpp
cpp/src/featurematchers/: EdgeletFeatureMatcher.cpp  EdgeletFeatureTracker.cpp  EllipsePatternFeatureTracker.cpp  Line2DFeatureMatcher.cpp  Line2DFeatureTracker.cpp  Point2DFeatureTracker.cpp  afeaturematcher.cpp  semanticBBoxFeatureTracker.cpp
cpp/src/landmarkinitializer/: Edgelet3DlandmarkInitializer.cpp  Line3DlandmarkInitializer.cpp  Point3DlandmarkInitializer.cpp  alandmarkinitializer.cpp  semanticBBoxlandmarkInitializer.cpp
cpp/src/optimizers/: AOptimizer.cpp  AngularAdjustmentCERESAnalytic.cpp  BundleAdjustmentCERESAnalytic.cpp  BundleAdjustmentCERESNumeric.cpp  marginalization.cpp
cpp/src/utilities/: ConfigFileReader.cpp  timer.cpp
cpp/tests/: association_test.cpp  basic_test.cpp  imu_test.cpp  linefeature_test.cpp  marginalization_test.cpp  mesh_test.cpp  nofov_test.cpp  residual_test.cpp
docker/: Dockerfile  run.sh
ros/: CMakeLists.txt  package.xml
ros/config/: config.yaml
ros/config/dataset/: drone.yaml  eth.yaml  gazebo_fisheye.yaml  gazebo_pinhole.yaml  gvins.yaml  isae_fisheye.yaml  isae_mmx.yaml  isae_nofov.yaml  kitti.yaml  oivio.yaml  oivio_ds.yaml  omnicv.yaml
ros/launch/: isae_slam.rviz  isae_slam.xml
ros/src/: main.cpp  rosVisualizer.h  sensorSubscriber.h
